# agentune

./: .ai-guidelines.md  .env.example  .gitignore  .pre-commit-config.yaml  CODING_STANDARDS.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
agentune-analyze/: pyproject.toml
agentune-analyze/agentune/analyze/core/: database.py  dataset.py  duckdbio.py  types.py
agentune-analyze/agentune/analyze/feature/describe/: base.py
agentune-analyze/agentune/analyze/feature/eval/: efficient.py  limits.py  universal.py
agentune-analyze/agentune/analyze/feature/select/: __init__.py  linear_pairwise.py
agentune-analyze/agentune/analyze/feature/stats/: base.py  stats_calculators.py
agentune-analyze/agentune/analyze/join/: base.py  lookup.py
agentune-analyze/agentune/analyze/llmcache/: impl.py  openai_cache.py  sqlite_lru.py
agentune-analyze/agentune/analyze/model/: base.py
agentune-analyze/agentune/analyze/run/: base.py
agentune-analyze/agentune/analyze/run/enrich/: base.py
agentune-analyze/agentune/analyze/util/: copy.py  duckdbutil.py  feature_sse_reduction.py  httpx_limit.py  lrucache.py  oneatatime.py  queue.py
agentune-analyze/docs/: threading.md
agentune-analyze/tests/agentune/analyze/core/: test_database.py  test_llm.py  test_types.py
agentune-analyze/tests/agentune/analyze/data/conversations/: example_conversations_secondary.csv
agentune-analyze/tests/agentune/analyze/feature/: test_dedup_names.py  test_feature.py  test_sql.py
agentune-analyze/tests/agentune/analyze/feature/eval/: incremental_metrics.py  test_efficient.py  test_universal.py
agentune-analyze/tests/agentune/analyze/feature/select/: conftest.py  test_categorical_logic.py  test_core_functionality.py
agentune-analyze/tests/agentune/analyze/join/: test_join_strategy.py
agentune-analyze/tests/agentune/analyze/llmcache/: test_openai_cache.py  test_serializing_kvstore.py  test_sqlite_lru.py
agentune-analyze/tests/agentune/analyze/util/: test_asyncmap.py  test_cattrutil.py  test_copy.py  test_lrucache.py
agentune_analyze/: .ruff.toml  README.md  mypy.ini  pyproject.toml
agentune_analyze/agentune/analyze/core/: __init__.py  llm.py  schema.py  sercontext.py  setup.py  threading.py
agentune_analyze/agentune/analyze/feature/: base.py  dedup_names.py  problem.py  util.py
agentune_analyze/agentune/analyze/feature/eval/: base.py
agentune_analyze/agentune/analyze/feature/select/: base.py  lightgbm.py
agentune_analyze/agentune/analyze/feature/stats/: regression_stats.py
agentune_analyze/agentune/analyze/join/: conversation.py  timeseries.py
agentune_analyze/agentune/analyze/llmcache/: base.py  serializing_kvstore.py
agentune_analyze/agentune/analyze/progress/: base.py
agentune_analyze/agentune/analyze/run/enrich/: impl.py
agentune_analyze/agentune/analyze/run/feature_search/: base.py  impl.py  problem_discovery.py
agentune_analyze/agentune/analyze/run/ingest/: sampling.py
agentune_analyze/agentune/analyze/util/: asynclimits.py  asyncmap.py  atomic.py  attrutil.py  cattrutil.py  polarutil.py  pool.py
agentune_analyze/docs/: README.md  duckdb.md  features.md  progress.md  serialization.md  using_duckdb.md
agentune_analyze/tests/agentune/analyze/: conftest.py
agentune_analyze/tests/agentune/analyze/core/: test_dataset.py  test_sercontext.py
agentune_analyze/tests/agentune/analyze/feature/: test_util.py
agentune_analyze/tests/agentune/analyze/ingest/: test_sampling.py
agentune_analyze/tests/agentune/analyze/join/: test_conversation.py  test_lookup.py  test_timeseries.py
agentune_analyze/tests/agentune/analyze/progress/: test_progress_base.py  test_progress_example.py
agentune_analyze/tests/agentune/analyze/util/: test_asynclimits.py  test_httpx_limit.py  test_pool.py
agentune_simulate/: CODING_STANDARDS.md  README.md  pyproject.toml
agentune_simulate/agentune/simulate/: __init__.py
agentune_simulate/agentune/simulate/channels/: __init__.py  base.py
agentune_simulate/agentune/simulate/models/: analysis.py  conversation.py  results.py
agentune_simulate/agentune/simulate/outcome_detection/: zeroshot.py
agentune_simulate/agentune/simulate/outcome_detection/rag/: prompt.py  rag.py
agentune_simulate/agentune/simulate/participants/: __init__.py  base.py
agentune_simulate/agentune/simulate/participants/agent/: __init__.py  config.py
agentune_simulate/agentune/simulate/rag/: __init__.py  filtered_retriever.py  indexing_and_retrieval.py
agentune_simulate/agentune/simulate/runners/: base.py  hybrid_simulation.py
agentune_simulate/agentune/simulate/simulation/: analysis.py  progress.py  session_builder.py  simulation_session.py
agentune_simulate/agentune/simulate/simulation/adversarial/: __init__.py  prompts.py  zeroshot.py
agentune_simulate/docs/: langchain.md
agentune_simulate/docs/development/: design.md  dev_guide.md  environment-setup.md  folder_structure.md  simulation session flow.md  style-guide.md  technical_guidelines.md
agentune_simulate/examples/: README.md  getting_started.ipynb  loading_conversations.ipynb  persistent_storage_example.ipynb  real_agent_integration.ipynb  utils.py
agentune_simulate/examples/data/: sample_conversations.csv
agentune_simulate/streamlit/: Agentune_Simulate_Results_Analyzer.py  README.md  helper.py
agentune_simulate/streamlit/pages/: Agentune_Simulate_Runner.py  Conversation_Simulator_Runner.py
agentune_simulate/tests/simulate/: conftest.py
agentune_simulate/tests/simulate/data/: example_conversation_data.json
agentune_simulate/tests/simulate/fixtures/: dummy.py
agentune_simulate/tests/simulate/integration/: test_rag_agent.py  test_rag_customer.py  test_rag_processing.py  test_simulation_session.py  test_zero_shot_customer.py  test_zeroshot_adversarial.py  test_zeroshot_intent_extractor.py  test_zeroshot_outcome_detector.py
agentune_simulate/tests/simulate/models/: test_models.py
agentune_simulate/tests/simulate/rag/: test_data.py  test_indexing_retrieval.py
agentune_simulate/tests/simulate/runners/: _conversation_util.py  test_full_simulation.py
(+180 files in other folders)
