[tool.poetry]
name = "conversation_simulator"
version = "0.1.0"
description = "A tool for simulating Customer-Agent conversations based on real chat data"
authors = ["SparkBeyond <info@sparkbeyond.com>"]
readme = "README.md"
packages = [{include = "conversation_simulator"}]
license = "MIT"
repository = "https://github.com/SparkBeyond/conversation-simulator"
documentation = "https://github.com/SparkBeyond/conversation-simulator"


[tool.poetry.dependencies]
python = ">=3.12.3,<4.0"
# Core dependencies
attrs = "^25.3.0"
cattrs = "^25.1.1"

# LLM Integration
langchain = "^0.3.25"
langchain-openai = "^0.3.21"
langchain-community = "^0.3.21"
pydantic = "^2.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
mypy = "^1.15.0"
ruff = "^0.11.11"
pre-commit = "^3.5.0"
types-attrs = "^19.1.0"

[tool.poetry.group.streamlit.dependencies]
streamlit = "^1.46.0"
pandas = "^2.3.0"
plotly = "^6.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]                         # top-level
target-version = "py312"            # align with project requirements
line-length = 100                   # matches your guideline

[tool.ruff.lint]
# Linter configuration
select = ["E", "F", "UP006", "UP007", "UP045", "UP035"]  # Add modern type hint rules
ignore = ["E203", "E266", "E501"]  # Relax whitespace & long-line rules

[tool.mypy]
# Type checking configuration
python_version = "3.12"
show_error_codes = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
explicit_package_bases = true
disable_error_code = [
    "truthy-function", "redundant-cast", "var-annotated",
    "override", "import-untyped", "import-not-found"
]

# Cache settings
cache_dir = ".mypy_cache"
incremental = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (deselected by default)",
]
addopts = "-m 'not integration'"
