[project]
name = "agentune-analyze"
version = "0.0.1"
description = "Create a customer simulator (twin) based on a set of real conversations."
authors = [
    {name = "Agentune dev team", email = "agentune-dev@sparkbeyond.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12,<4.0"
keywords = ["agent analyzer", "agent evaluation", "customer support", "sales agents", "conversational agents", "AI agents", "chatbot evaluation", "customer-service", "customer facing agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Repository = "https://github.com/shacharlevy1991/agentune"
Homepage = "https://github.com/shacharlevy1991/agentune/tree/main/agentune_analyze"
Documentation = "https://github.com/shacharlevy1991/agentune/tree/main/agentune_analyze"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentune_analyze"
version = "0.1.0"
description = "A library for discovering insights in data"
authors = ["SparkBeyond Team"]
readme = "README.md"
packages = [{include = "agentune"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
duckdb = ">=1.2.1,<2.0.0"
pyarrow = ">=19.0.1"
numpy = ">=2.2.4,<3.0.0"
janus = ">=2.0.0,<3.0.0"
polars = ">=1.27.1,<2.0.0"
attrs = "^25.3.0"
scikit-learn = ">=1.6.1,<2.0"
scipy = ">=1.15.3,<2.0"
scipy-stubs = ">=1.15.3.0"
cattrs = "^25.3.0"
httpx = {extras = ["http2"], version = "^0.28.1"}
frozendict = "^2.4.6"
more-itertools = "^10.7.0"
llama-index-core = "^0.13.2"
lightgbm = "^4.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.6"
pytest-mypy-plugins = "^3.2.0"
pyarrow-stubs = ">=19.1"
pytest = "^8.3.5"
matplotlib = "^3.10.3"
pytest-asyncio = "^1.0.0"
llama-index-llms-openai = "^0.5.4"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-m not integration"
]
testpaths = [ "tests" ]
pythonpath = ["."]
tmp_path_retention_policy = "none"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselected by default)"
]
